🐞 List layout issues (#409)
Parent issue: https://github.com/sequentech/meta/issues/276

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -318,7 +318,7 @@
   }
 
   .election-container {
-    flex-grow: 2;
+    flex-grow: 2 !important;
     display: flex;
     flex-direction: column;
   }
